--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -7,7 +7,7 @@
     <p>Instructions: {{instructions}} </p>
     <br>
 
-    <form action='/questions/0'>
+    <form action='/start'>
         <button>Start Survey</button>
     </form>
     
