--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -3,8 +3,8 @@
 {% block title %} Homepage {% endblock %}
 
 {% block content %}
-    <h1>Survey: {{title}} </h1>
-    <p>Instructions: {{instructions}} </p>
+    <h1>Survey: {{survey.title}} </h1>
+    <p>Instructions: {{survey.instructions}} </p>
     <br>
 
     <form action='/start'>
